# ChangeLog for dev-libs/syck
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/syck/ChangeLog,v 1.22 2007/10/29 14:39:27 lu_zero Exp $

  29 Oct 2007; Luca Barbato <lu_zero@gentoo.org> syck-0.55-r4.ebuild:
  Marked ~ppc and ~ppc64

  21 Oct 2007; <cab@gentoo.org> syck-0.55-r4.ebuild:
  changed from distutils to python eclass (request from dev-zero)

  21 Oct 2007; Michael Sterrett <mr_bones_@gentoo.org> -syck-0.55-r3.ebuild:
  remove old, dep-broken ebuild

  16 Oct 2007; Stefan Briesenick <sbriesen@gentoo.org> syck-0.55-r3.ebuild,
  syck-0.55-r4.ebuild:
  added dev-python/pysyck block dependency

  15 Oct 2007; Anant Narayanan <anant@gentoo.org> syck-0.55-r4.ebuild:
  syck-php-bindings moved to pecl-syck

  26 Jul 2007; Christian Faulhammer <opfer@gentoo.org> syck-0.55-r4.ebuild:
  really stable x86, bug 180863

  25 Jul 2007; Christoph Mende <angelos@gentoo.org> syck-0.55-r4.ebuild:
  Stable on amd64 wrt bug #180863

  09 Jul 2007; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
  stable x86, bug 180863

*syck-0.55-r4 (06 Jul 2007)

  06 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  +files/syck-0.55-64bit.patch, +syck-0.55-r4.ebuild:
  Bug 180863, patch courtesy of David Leverton

  30 Nov 2006; Michael Cummings <mcummings@gentoo.org> syck-0.55-r3.ebuild:
  Marking amd64 stable, related to bug 152048

  29 Nov 2006; Christian Faulhammer <opfer@gentoo.org> syck-0.55-r3.ebuild:
  stable x86, bug #152048

  29 Nov 2006; Yuval Yaari <yuval@gentoo.org> -syck-0.53.ebuild,
  -syck-0.55.ebuild, -syck-0.55-r1.ebuild, -syck-0.55-r2.ebuild:
  Cleaning up a bit...

*syck-0.55-r3 (04 Oct 2006)

  04 Oct 2006; Yuval Yaari <yuval@gentoo.org> +syck-0.55-r3.ebuild:
  Bug #145085 - revision-bump to add PDEPEND for dev-php[45]/syck-php-bindings

*syck-0.55-r2 (06 Sep 2006)

  06 Sep 2006; Yuval Yaari <yuval@gentoo.org> +syck-0.55-r2.ebuild:
  Revision bump in order to resolve bug #145085
