@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-syck/Attic/pecl-syck-0.9.1.ebuild,v 1.4 2007/11/16 16:46:15 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-syck/Attic/pecl-syck-0.9.1.ebuild,v 1.5 2007/11/18 17:44:36 corsair Exp $
 
 PHP_EXT_NAME="syck"
 PHP_EXT_INI="yes"
@@ -9,7 +9,7 @@ DOCS="CHANGELOG TODO"
 
 inherit php-ext-pecl-r1
 
-KEYWORDS="amd64 ~ppc x86"
+KEYWORDS="amd64 ~ppc ppc64 x86"
 
 DESCRIPTION="PHP bindings for Syck - an extension for reading and writing YAML swiftly in popular scripting languages."
 LICENSE="BSD"
