@@ -1,6 +1,9 @@
 # ChangeLog for dev-php5/pecl-syck
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-syck/Attic/ChangeLog,v 1.6 2007/11/16 16:46:15 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-syck/Attic/ChangeLog,v 1.7 2007/11/18 17:44:36 corsair Exp $
+
+  18 Nov 2007; Markus Rothe <corsair@gentoo.org> pecl-syck-0.9.1.ebuild:
+  Stable on ppc64; bug #198568
 
   16 Nov 2007; nixnut <nixnut@gentoo.org> pecl-syck-0.9.1.ebuild:
   Added ~ppc wrt bug 198568
