@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/syck
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/syck/ChangeLog,v 1.22 2007/10/29 14:39:27 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/syck/ChangeLog,v 1.23 2007/11/18 17:43:21 corsair Exp $
+
+  18 Nov 2007; Markus Rothe <corsair@gentoo.org> syck-0.55-r4.ebuild:
+  Stable on ppc64; bug #198568
 
   29 Oct 2007; Luca Barbato <lu_zero@gentoo.org> syck-0.55-r4.ebuild:
   Marked ~ppc and ~ppc64
